--- a/src/css/mediaSlider2.css
+++ b/src/css/mediaSlider2.css
@@ -101,6 +101,124 @@ body .container-fluid {
   section.tab-navigation {
     display: none;
   }
+  section.dropdown-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    margin: 2rem 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  section.dropdown-section .dropdown-section__parent {
+    margin-right: 4rem;
+    width: 150px;
+  }
+  section.dropdown-section .dropdown-section__parent:hover > ul,
+  section.dropdown-section .dropdown-section__parent:focus > ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  section.dropdown-section .dropdown-section__parent:hover > div > svg,
+  section.dropdown-section .dropdown-section__parent:focus > div > svg {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    -webkit-transition: -webkit-transform 0.35s ease-in-out;
+    transition: -webkit-transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out, -webkit-transform 0.35s ease-in-out;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  section.dropdown-section .dropdown-section__parent:hover > div > button,
+  section.dropdown-section .dropdown-section__parent:focus > div > button {
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 600;
+  }
+  section.dropdown-section .dropdown-section__button-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    color: #b8b8b8;
+    background: #eeeeee;
+    border: 1px solid #b8b8b8;
+    border-radius: 8px;
+    padding: 0.375rem;
+  }
+  section.dropdown-section .dropdown-section__button-box button.dropdown-section-button {
+    background: transparent;
+    font-family: "Samim";
+    border: 0;
+    text-align: right;
+    width: 100%;
+    color: #b8b8b8;
+  }
+  section.dropdown-section .dropdown-section__button-box svg {
+    font-size: 24px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: -webkit-transform 0.35s ease-in-out;
+    transition: -webkit-transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out, -webkit-transform 0.35s ease-in-out;
+  }
+  section.dropdown-section ul.dropdown-section__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    -webkit-transition: display 0.3s ease-in;
+    transition: display 0.3s ease-in;
+    display: none;
+  }
+  section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link {
+    background-color: #eeeeee;
+    padding: .5rem;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-decoration: none;
+  }
+  section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link:first-child {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link:last-child {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+  section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link:hover {
+    background-color: rgba(74, 31, 97, 0.5);
+  }
+  section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link:hover > a {
+    color: white;
+  }
+  section.dropdown-section ul.dropdown-section__list li.dropdown-section__list-item {
+    width: 100%;
+    text-align: right;
+    color: black;
+  }
 }
 
 @media (max-width: 768px) {
