--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -561,7 +561,7 @@ section.best-categorie-icon {
 }
 
 section.banner-content {
-  height: 100px;
+  // height: 100px;
   @include section-style;
   margin: 0;
   position: relative;
