--- a/src/css/mediaCommon.css
+++ b/src/css/mediaCommon.css
@@ -13,6 +13,7 @@
   section.space-section h3.space-section-title {
     font-size: 1.1rem;
     padding: 1rem;
+    margin: 1rem;
   }
   div.swiper-button-prev,
   div.swiper-button-next {
