--- a/src/css/mediaSlider2.css
+++ b/src/css/mediaSlider2.css
@@ -21,6 +21,19 @@ body {
   direction: rtl;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 body a:focus {
@@ -76,6 +89,11 @@ body .container-fluid {
     max-width: 120px;
     padding: 0.375rem 0;
   }
+  section.several-row-slider {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
   section.several-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
     height: 150px;
   }
@@ -120,6 +138,7 @@ body .container-fluid {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin: 0;
   }
   section.dropdown-section .dropdown-section__parent {
     margin-right: 4rem;
@@ -222,6 +241,11 @@ body .container-fluid {
 }
 
 @media (max-width: 768px) {
+  section.dolatsara-slider-section {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide,
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next,
