--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -2,16 +2,18 @@
 
 section.dolatsara-slider-section {
   @include section-style;
+  margin: 0;
+  height: 90vh;
+  background-image: url("./../images/01.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 
   div.dolatsara-slider {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 70%;
-    background-image: url("./../images/Banners.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    // height: 100%;
 
     div.swiper {
       width: 80%;
@@ -117,19 +119,10 @@ section.dolatsara-slider-section {
 
 section.several-row-slider {
   @include section-style;
-  background-image: linear-gradient(
-      to bottom,
-      transparent,
-      rgba($color: $color-light, $alpha: 1) 95%
-    ),
-    linear-gradient(
-      to top,
-      transparent,
-      rgba($color: $color-light, $alpha: 1) 95%
-    ),
-    url("./../images/VectorSmartObjectcopy4.png");
+  background-image: url("./../images/03.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  // height: 100vh;
 
   h2.several-row-slider__title {
     font-weight: 600;
@@ -372,7 +365,7 @@ section.single-row-slider {
 
 section.album-slider {
   @include section-style;
-  background-image: url("./../images/polyganBg.png");
+  background-image: url("./../images/02.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 
@@ -405,6 +398,8 @@ section.album-slider {
               border-top-left-radius: 0.5rem;
               height: 200px;
               width: 100%;
+              font-size: .5rem;
+              text-align: center;
 
               img {
                 border-top-right-radius: 0.5rem;
