--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,21 +19,7 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  box-sizing: border-box;
 }
 
 body a:focus {
@@ -58,19 +44,10 @@ button.view-all {
 
 section.single-advertising-section {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 section.single-advertising-section h2.advertising__title {
@@ -100,10 +77,8 @@ section.single-advertising-section div.advertising-placeholder {
 
 section.several-advertising-section {
   width: 90%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 50% 50%;
-      grid-template-columns: 50% 50%;
+  grid-template-columns: 50% 50%;
   grid-gap: 10px;
   margin: auto;
   border-bottom: 1px solid #b8b8b8;
@@ -114,42 +89,37 @@ section.several-advertising-section .advertising-placeholder {
   background-color: rgba(184, 184, 184, 0.5);
   border-radius: 12px;
   margin: 2rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 section.space-section {
-  width: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 100%;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
+}
+
+section.space-section div.space-section__parent {
+  width: 90%;
   border-top: 1px solid rgba(184, 184, 184, 0.5);
 }
 
-section.space-section h3.space-section-title {
+section.space-section div.space-section__parent h3.space-section-title {
   text-align: center;
   width: 100%;
   font-size: 1.3rem;
   color: #4a1f61;
   background-color: rgba(184, 184, 184, 0.5);
   border-radius: 12px;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   font-weight: 600;
-  margin: 2rem;
+  margin: 2rem 0;
 }
 
 div.swiper-button-prev,
 div.swiper-button-next {
   background-color: white;
-  -webkit-box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
-          box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+  box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
   border-radius: 50%;
   width: 35px;
   height: 35px;
@@ -164,7 +134,6 @@ div.swiper-button-next:after {
 
 div.swiper-button-disabled {
   color: #979797;
-  -webkit-box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
-          box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+  box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
 }
 /*# sourceMappingURL=common.css.map */
