--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -22,10 +22,10 @@ body {
     font-size: 100%;
     direction: rtl;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
 
     a:focus {
         outline: 0;
