--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -63,21 +63,25 @@ section.several-advertising-section {
 }
 
 section.space-section {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: center;
-  border-top: 1px solid  rgba($color: $color-gray-4, $alpha: 0.5);
 
-  h3.space-section-title {
-    text-align: center;
-    width: 100%;
-    font-size: 1.3rem;
-    color: rgba($color: $color-purple, $alpha: 1);
-    background-color: rgba($color: $color-gray-4, $alpha: 0.5);
-    border-radius: 12px;
-    padding: 1.5rem;
-    font-weight: 600;
-    margin: 2rem;
+  div.space-section__parent {
+    width: 90%;
+    border-top: 1px solid rgba($color: $color-gray-4, $alpha: 0.5);
+
+    h3.space-section-title {
+      text-align: center;
+      width: 100%;
+      font-size: 1.3rem;
+      color: rgba($color: $color-purple, $alpha: 1);
+      background-color: rgba($color: $color-gray-4, $alpha: 0.5);
+      border-radius: 12px;
+      padding: 1.5rem 0;
+      font-weight: 600;
+      margin: 2rem 0;
+    }
   }
 }
 
