--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -23,10 +23,8 @@ section.dolatsara-slider-section {
           box-shadow: inset 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
           border-radius: 12px;
           background-color: rgba($color: $color-light, $alpha: 1);
-          background-image: linear-gradient(
-            rgba($color: $color-purple, $alpha: 0.15),
-            transparent 10%
-          );
+          background-image: linear-gradient(rgba($color: $color-purple, $alpha: 0.15),
+              transparent 10%);
           transition: all 0.3ms ease-in;
           transform: scale(0.75);
           margin-top: 2rem;
@@ -556,7 +554,7 @@ section.best-categorie-icon {
 }
 
 section.banner-content {
-  // height: 100px;
+  height: 100px;
   @include section-style;
   margin: 0;
   position: relative;
@@ -581,6 +579,7 @@ section.banner-content {
       &:first-child {
         border-top-right-radius: 8px;
       }
+
       &:last-child {
         border-bottom-left-radius: 8px;
       }
